-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
1
-
3
-
22,410
-
Orion
-
4817
Remove the ldiskfs hash code from mea.c as described by comment 15 in Lustre bugzilla 22410. The MEA_MAGIC_HASH_SEGMENT case has been replaced with a CERROR() which will indicate if this ever occurs.
"Yes, the two level hashing function is implemented in this patch. And there no ldiskfs hash dependency on client anymore, so those ldiskfs hash function can be removed from mea.c"
– wangdi
This was originally filed as Lustre bugzilla 22410.
- Trackbacks
-
Changelog 2.2
version 2.2.0 Support for networks: o2iblnd OFED 1.5.4 Server support for kernels: 2.6.32220.4.2.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.18.1.el5 (RHEL5) 2.6.32220.4.2.el6 (RHEL6) 2.6.32.360....